# chloebot-rs

./: .gitignore  Cargo.toml  config.def.json5
src/: main.rs
src/commands/: misc.rs  mod.rs
src/core/: db.rs  mod.rs
